# kata-trivia

./: .flake8  README.md  log.txt  pyproject.toml  random_source.py  trivia.py
reference/: result.txt
tests/: conftest.py  expected.txt  test_categories.py  test_fake_random.py  test_game.py  test_log.py  test_non_regression.py  test_player.py  test_random.py
trivia/: categories.py  context.py  game.py  player.py
