[tool.isort]
profile = "black"

[tool.poetry]
name = "trivia"
version = "0.1.0"
description = "trivia game implementation"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
